SLI-1826 Handle missing cases